# wingpanel-indicator-daynight

./: .gitignore  README.md  meson.build
data/: gschema.xml  meson.build
meson/: post_install.py
po/: POTFILES  com.github.maze-n.indicator-daynight.pot  fr.po  meson.build
src/: Indicator.vala
